# compute-3d

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
include/: CustomRendering.h  Model.h  Shader.h
include/utils/: Delector.hpp
src/: CustomRendering.cpp  Model.cpp
